Исправил 1 смысловую ошибку и 1 опечатку

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -10,7 +10,7 @@
 
 1936 – Alan Turing изобрел все языки программирования, которые только можно придумать. Но британская разведка уговорила его стать агентом 007 до того, как он запатентовал всё это.
 
-1936 – Alonzo Church также изобрел все языки, которые только можно придумать, но сделал это лучше. Его лямбда-исчисления были проигнорированны, потому что слишком походили на C. Критиковали, не смотря на то, что C еще не был изобретен.
+1936 – Alonzo Church также изобрел все языки, которые только можно придумать, но сделал это лучше. Его лямбда-исчисления были проигнорированны, потому что недостаточно походили на C. Критиковали, не смотря на то, что C еще не был изобретен.
 
 1940ые – Различные "компьютеры" "программировались" с помощью перетыкания проводов и дергания за переключатели. Программисты делали так, чтобы избежать дебатов про пробелы и табуляции.
 
@@ -18,7 +18,7 @@
 
 1958 – John McCarthy и Paul Graham изобрели LISP. Но из-за высоких цен, установленных ввиду истощения стратегического запаса круглых скобок, LISP так и не стал популярным. {<К счастью программистов запасы фигурных и угловых скобок были велики>}. Это, впрочем, не помешало LISP (в современном написании Lisp и даже иногда Arc) стать важным языком в "ключевых алгоритмических приемах, таких как рекурсия и высокомерие".
 
-1964 – John Kemeny и Thomas Kurtz создали BASIC, неструктурированный язык программирования для некомьпютерных ученых.
+1964 – John Kemeny и Thomas Kurtz создали BASIC, неструктурированный язык программирования для некомпьютерных ученых.
 
 1965 – Kemeny и Kurtz `GO TO 1964`.
 
