--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -24,7 +24,7 @@
 
 1970 – Guy Steele и Gerald Sussman создали Scheme. Они вели работу над серией "Лямба, Невероятная" с кульминационным выпуском "Лямбда, Невероятная Кухонная Утварь". Этот документ лег в основу долго живущего, но Невероятно непопулярного выпуска ночного "магазина на диване". Лямбды погрузились во тьму, пока Java не сделала их популярной, тем фактом, что не имела их.
 
-1970 – Niklaus Wirth создал Pascal, процедурным языком. Критики немедленно осудили Pascal за использование синтаксиса `x := x + y`, вместо привычного всем C-подобного `x = x + y`. Критиковали, не смотря на то, что C еще не был изобретен.
+1970 – Niklaus Wirth создал Pascal, процедурный язык. Критики немедленно осудили Pascal за использование синтаксиса `x := x + y`, вместо привычного всем C-подобного `x = x + y`. Критиковали, не смотря на то, что C еще не был изобретен.
 
 1972 – Dennis Ritchie изобрел мощный пистолет, который стрелял вперед и назад одновременно. Не удовлетворенный количеством смертей и инвалидностей он решил не останавливаться на достигнутом и изобрел C и Unix.
 
