маааленький минорный патчик в оформлении

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -20,7 +20,7 @@
 
 1964 – John Kemeny и Thomas Kurtz создали BASIC, неструктурированный язык программирования для некомьпютерных ученых.
 
-1965 – Kemeny и Kurtz `GO TO 1964`.
+1965 – Kemeny и Kurtz : `GO TO 1964`.
 
 1970 – Guy Steele и Gerald Sussman создали Scheme. Они вели работу над серией "Лямба, Невероятная" с кульминационным выпуском "Лямбда, Невероятная Кухонная Утварь". Этот документ лег в основу долго живущего, но Невероятно непопулярного выпуска ночного "магазина на диване". Лямбды погрузились во тьму, пока Java не сделала их популярной, тем фактом, что не имела их.
 
