typo с удвоенной нн. Вот я дэбил всё же

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -10,7 +10,7 @@
 
 1936 – Alan Turing изобрел все языки программирования, которые только можно придумать. Но британская разведка уговорила его стать агентом 007 до того, как он запатентовал всё это.
 
-1936 – Alonzo Church также изобрел все языки, которые только можно придумать, но сделал это лучше. Его лямбда-исчисления были проигнорированны, потому что недостаточно походили на C. Критиковали, не смотря на то, что C еще не был изобретен.
+1936 – Alonzo Church также изобрел все языки, которые только можно придумать, но сделал это лучше. Его лямбда-исчисления были проигнорированы, потому что недостаточно походили на C. Критиковали, не смотря на то, что C еще не был изобретен.
 
 1940ые – Различные "компьютеры" "программировались" с помощью перетыкания проводов и дергания за переключатели. Программисты делали так, чтобы избежать дебатов про пробелы и табуляции.
 
