--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -38,7 +38,7 @@
 
 1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоится, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
 
-1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объеденивший в себе безопасность работы с памятью С со невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дизлексией.
+1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объеденивший в себе безопасность работы с памятью С со невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дислексией.
 
 1987 – Larry Wall уснул перед компьютером и лег головой на клавиатуру. После пробуждения Лэрри познал истину: строки, отобразившиеся на экране монитора это не случайный набор символов, но пример программы на языке программирования. И сам Бог хочет, чтобы его пророк, Larry Wall, создал его! Так родился Perl
 
