--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -36,7 +36,7 @@
 
 1983 – В честь умения Ады Лавлейс создавать программы, которые никогда не запускаются, Jean Ichbiah и МинОбороны США создали язык программирования Ada. Назло недостатку улик, доказывающих, что какая-либо программа на Ada была дописана, историки верят, что Ада это успешно работающий проект, который удерживает сотни бродячих контракторов от вступления в банды.
 
-1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоится, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
+1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять в будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоится, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
 
 1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объединивший в себе безопасность работы с памятью С со невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дислексией.
 
