Исправил пару опечаток, добавил несколько запытых.

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -14,41 +14,41 @@
 
 1940ые – Различные "компьютеры" "программировались" с помощью перетыкания проводов и дергания за переключатели. Программисты делали так, чтобы избежать дебатов про пробелы и табуляции.
 
-1957 – John Backus и IBM создали FORTRAN. Нет ничего смешного в IBM или фортране. И вообще, это синтаксическая ошибка, писать "FORTRAN" не надев голубой галстук.
+1957 – John Backus и IBM создали FORTRAN. Нет ничего смешного в IBM или фортране. И вообще, это синтаксическая ошибка, писать "FORTRAN", не надев голубой галстук.
 
-1958 – John McCarthy и Paul Graham изобрели LISP. Но из-за высоких цен, установленных ввиду истощения стратегического запаса круглых скобок, LISP так и не стал популярным. {<К счастью программистов запасы фигурных и угловых скобок были велики>}. Это, впрочем, не помешало LISP (в современном написании Lisp и даже иногда Arc) стать важным языком в "ключевых алгоритмических приемах, таких как рекурсия и высокомерие".
+1958 – John McCarthy и Paul Graham изобрели LISP. Но из-за высоких цен, установленных ввиду истощения стратегического запаса круглых скобок, LISP так и не стал популярным. {<К счастью программистов, запасы фигурных и угловых скобок были велики>}. Это, впрочем, не помешало LISP (в современном написании Lisp и даже иногда Arc) стать важным языком в "ключевых алгоритмических приемах, таких как рекурсия и высокомерие".
 
 1964 – John Kemeny и Thomas Kurtz создали BASIC, неструктурированный язык программирования для некомпьютерных ученых.
 
 1965 – Kemeny и Kurtz : `GO TO 1964`.
 
-1970 – Guy Steele и Gerald Sussman создали Scheme. Они вели работу над серией "Лямба, Невероятная" с кульминационным выпуском "Лямбда, Невероятная Кухонная Утварь". Этот документ лег в основу долго живущего, но Невероятно непопулярного выпуска ночного "магазина на диване". Лямбды погрузились во тьму, пока Java не сделала их популярной, тем фактом, что не имела их.
+1970 – Guy Steele и Gerald Sussman создали Scheme. Они вели работу над серией "Лямбда, Невероятная" с кульминационным выпуском "Лямбда, Невероятная Кухонная Утварь". Этот документ лег в основу долго живущего, но Невероятно непопулярного выпуска ночного "магазина на диване". Лямбды погрузились во тьму, пока Java не сделала их популярной, тем фактом, что не имела их.
 
 1970 – Niklaus Wirth создал Pascal, процедурный язык. Критики немедленно осудили Pascal за использование синтаксиса `x := x + y`, вместо привычного всем C-подобного `x = x + y`. Критиковали, не смотря на то, что C еще не был изобретен.
 
 1972 – Dennis Ritchie изобрел мощный пистолет, который стрелял вперед и назад одновременно. Не удовлетворенный количеством смертей и инвалидностей он решил не останавливаться на достигнутом и изобрел C и Unix.
 
-1972 – Alain Colmerauer придумал логический язык Prolog. Его целью было создать язык с интеллектом двухлетнего ребенка. Он доказал что достиг своей цели, показав сессию Prolog'а, который отвечал "Нет." на каждый вопрос.
+1972 – Alain Colmerauer придумал логический язык Prolog. Его целью было создать язык с интеллектом двухлетнего ребенка. Он доказал, что достиг своей цели, показав сессию Prolog'а, который отвечал "Нет." на каждый вопрос.
 
 1973 – Robin Milner создал ML, язык, базирующийся на теории M&M. ML породил SML, имеющий формальную определенную семантику. Когда Мильнера спросили о формальной семантике формальной семантики – его голова взорвалась. Другие широко известные языки из семейства ML – OCaml, F# и Visual Basic.
 
-1980 – Alan Kay создает Smalltalk и изобретает термин "объектно-ориентированный". Когда его спросили, что это значит, он ответил: "Программы на Smalltalk это просто объекты". Когда его спросили, из чего состоят объекты, он ответил: "из объектов". Когда его спросили еще раз, он сказал: "слушай, это всё объекты, и они состоят из объектов и так глубже и глубже. Пока не достигнешь черепашек".
+1980 – Alan Kay создает Smalltalk и изобретает термин "объектно-ориентированный". Когда его спросили, что это значит, он ответил: "Программы на Smalltalk - это просто объекты". Когда его спросили, из чего состоят объекты, он ответил: "из объектов". Когда его спросили еще раз, он сказал: "слушай, это всё объекты, и они состоят из объектов и так глубже и глубже. Пока не достигнешь черепашек".
 
 1983 – В честь умения Ады Лавлейс создавать программы, которые никогда не запускаются, Jean Ichbiah и МинОбороны США создали язык программирования Ada. Назло недостатку улик, доказывающих, что какая-либо программа на Ada была дописана, историки верят, что Ада это успешно работающий проект, который удерживает сотни бродячих контракторов от вступления в банды.
 
-1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоится, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
+1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять в будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоиться, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
 
-1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объединивший в себе безопасность работы с памятью С со невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дислексией.
+1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объединивший в себе безопасность работы с памятью С с невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дислексией.
 
 1987 – Larry Wall уснул перед компьютером и лег головой на клавиатуру. После пробуждения Лэрри познал истину: строки, отобразившиеся на экране монитора это не случайный набор символов, но пример программы на языке программирования. И сам Бог хочет, чтобы его пророк, Larry Wall, создал его! Так родился Perl
 
-1990 – Комитет, сформированный из Симона Пейтон-Джонса, Пола Худака, Филиппа Вэдлера, Эштона Катчера и "Людей за Этичное Обращение с Животными", создает Haskell, чистый, не строгий функциональный язык. Haskell получает некоторое сопротивление из-за сложности с использованием монад, для контроля побочных эффектов. Вэдлер пытается успокоить критиков, пояснив, что "монада это всего лишь моноид в категории эндофункторов, в чем проблема-то?"
+1990 – Комитет, сформированный из Симона Пейтон-Джонса, Пола Худака, Филиппа Вэдлера, Эштона Катчера и "Людей за Этичное Обращение с Животными", создает Haskell, чистый, не строгий функциональный язык. Haskell получает некоторое сопротивление из-за сложности с использованием монад для контроля побочных эффектов. Вэдлер пытается успокоить критиков, пояснив, что "монада это всего лишь моноид в категории эндофункторов, в чем проблема-то?"
 
-1991 – Голандский программист Guido van Rossum отправляется в Аргентину ради мистической операции. Он возвращается с ужасным шрамом на черепе, изобретает Python, объявляется пожизненным диктатором для легионов последователей и объявляет на весь мир что "Есть только один способ сделать что-либо". Поляки начинают нервничать.
+1991 – Голландский программист Guido van Rossum отправляется в Аргентину ради мистической операции. Он возвращается с ужасным шрамом на черепе, изобретает Python, объявляется пожизненным диктатором для легионов последователей и объявляет на весь мир что "Есть только один способ сделать что-либо". Поляки начинают нервничать.
 
 1995 – В итальянском ресторане Rasmus Lerdorf понимает, что его тарелка спагетти это отличная модель для понимания сущности World Wide Web и веб-приложения должны имитировать её середину. На обратной стороне салфетки он проектирует Программируемую Хипертекстовую Пасту (ПХП). Документация на PHP до сих пор остается на этой салфетке.
 
-1995 – Yukihiro "Псих Мэтц" Matsumoto создает Ruby чтобы предотвратить некоторый смутный и неопределенный апокалипсис, который сбежал из австралийских пустынь, гонимый воинами в ирокезах и Тиной Тёрнер. Позднее язык был переименован в Ruby On Rails его настоящим изобретателем, David Heinemeier Hansson. [Кусок о том, что Матцумото изобрел язык, называемый Ruby, никогда не происходил и лучше удалить его в следующей ревизии этой статьи].
+1995 – Yukihiro "Псих Мэтц" Matsumoto создает Ruby, чтобы предотвратить некоторый смутный и неопределенный апокалипсис, который сбежал из австралийских пустынь, гонимый воинами в ирокезах и Тиной Тёрнер. Позднее язык был переименован в Ruby On Rails его настоящим изобретателем, David Heinemeier Hansson. [Кусок о том, что Матцумото изобрел язык, называемый Ruby, никогда не происходил и лучше удалить его в следующей ревизии этой статьи].
 
 1995 – Brendan Eich читает о каждой ошибке, совершенной создателями языков программирования, изобретает еще парочку и создает язык LiveScript. Позднее, в попытке срубить деньжат на популярности Java язык был переименован в JavaScript. Еще позднее, в попытке срубить деньжат на популярности кожных заболеваний, язык был переименован в ECMAScript.
 
