Моя ошибка. Там запятая все же нужна, так как это сложносочиненное предложение.

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -56,6 +56,6 @@
 
 2001 – Anders Hejlsberg изобретает C#. C# это относительно многословный, базирующийся на классах, статически типизированный язык программирования с одиночной диспетчеризацией, автоматической сборкой мусора, одним уровнем наследования реализации и множественным наследованием интерфейсов. Майкрософт громко восславил C# как инновацию.
 
-2003 – бухой Martin Odersky видит рекламу орехового масла Reese's, в которой кто-то мажет ореховое масло поверх чьего-то шоколадного масла, и у него появляется идея. Он создает Scala, язык, который объединяет в себе конструкции объектно-ориентированных и функциональных языков. Это раздражает обе группы и каждая незамедлительно объявляет джихад Scala.
+2003 – бухой Martin Odersky видит рекламу орехового масла Reese's, в которой кто-то мажет ореховое масло поверх чьего-то шоколадного масла, и у него появляется идея. Он создает Scala, язык, который объединяет в себе конструкции объектно-ориентированных и функциональных языков. Это раздражает обе группы, и каждая незамедлительно объявляет джихад Scala.
 
 *P.S. напоминаю вам, что [этот документ доступен на github, если вы хотите поправить орфографию и прочие детали – правьте и шлите пуллреквесты](https://github.com/bobuk/addmeto.cc/blob/master/source/posts/2012-04-22-troop.md)*
