Пол Грэм не изобретал Лисп.

--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -16,7 +16,7 @@
 
 1957 – John Backus и IBM создали FORTRAN. Нет ничего смешного в IBM или фортране. И вообще, это синтаксическая ошибка, писать "FORTRAN", не надев голубой галстук.
 
-1958 – John McCarthy и Paul Graham изобрели LISP. Но из-за высоких цен, установленных ввиду истощения стратегического запаса круглых скобок, LISP так и не стал популярным. {<К счастью программистов, запасы фигурных и угловых скобок были велики>}. Это, впрочем, не помешало LISP (в современном написании Lisp и даже иногда Arc) стать важным языком в "ключевых алгоритмических приемах, таких как рекурсия и высокомерие".
+1958 – John McCarthy изобрел LISP. Но из-за высоких цен, установленных ввиду истощения стратегического запаса круглых скобок, LISP так и не стал популярным. {<К счастью программистов, запасы фигурных и угловых скобок были велики>}. Это, впрочем, не помешало LISP (в современном написании Lisp и даже иногда Arc) стать важным языком в "ключевых алгоритмических приемах, таких как рекурсия и высокомерие".
 
 1964 – John Kemeny и Thomas Kurtz создали BASIC, неструктурированный язык программирования для некомпьютерных ученых.
 
