--- a/source/posts/2012-04-22-troop.md
+++ b/source/posts/2012-04-22-troop.md
@@ -36,15 +36,15 @@
 
 1983 – В честь умения Ады Лавлейс создавать программы, которые никогда не запускаются, Jean Ichbiah и МинОбороны США создали язык программирования Ada. Назло недостатку улик, доказывающих, что какая-либо программа на Ada была дописана, историки верят, что Ада это успешно работающий проект, который удерживает сотни бродячих контракторов от вступления в банды.
 
-1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять в будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоиться, детка" с монотонным австрийским акцентом. Вообще есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
+1983 – Bjarne Stroustrup вкрутил всё, о чем только слышал в C и создал C++. Полученный язык программирования был настолько сложным, что программы нужно отправлять в будущее, чтобы скомпилировать их с помощью искусственного интеллекта Скайнет. Время компиляции заставляет страдать. Мотивы Скайнета, который оказывает этот сервис, остаются неясными. Но некто из будущего говорит "тут не о чем беспокоиться, детка" с монотонным австрийским акцентом. Вообще, есть предположение, что Скайнет всего лишь претенциозное переполнение буффера.
 
 1986 – Brad Cox и Tom Love создают язык Objective-C, как "язык объединивший в себе безопасность работы с памятью С с невероятной скоростью Smalltalk". Современные историки считают, что оба они страдали дислексией.
 
-1987 – Larry Wall уснул перед компьютером и лег головой на клавиатуру. После пробуждения Лэрри познал истину: строки, отобразившиеся на экране монитора это не случайный набор символов, но пример программы на языке программирования. И сам Бог хочет, чтобы его пророк, Larry Wall, создал его! Так родился Perl
+1987 – Larry Wall уснул перед компьютером и лег головой на клавиатуру. После пробуждения Лэрри познал истину: строки, отобразившиеся на экране монитора это не случайный набор символов, но пример программы на языке программирования. И сам Бог хочет, чтобы его пророк, Larry Wall, создал его! Так родился Perl.
 
-1990 – Комитет, сформированный из Симона Пейтон-Джонса, Пола Худака, Филиппа Вэдлера, Эштона Катчера и "Людей за Этичное Обращение с Животными", создает Haskell, чистый, не строгий функциональный язык. Haskell получает некоторое сопротивление из-за сложности с использованием монад для контроля побочных эффектов. Вэдлер пытается успокоить критиков, пояснив, что "монада это всего лишь моноид в категории эндофункторов, в чем проблема-то?"
+1990 – Комитет, сформированный из Симона Пейтон-Джонса, Пола Худака, Филиппа Вэдлера, Эштона Катчера и "Людей за Этичное Обращение с Животными", создает Haskell, чистый, не строгий функциональный язык. Haskell получает некоторое сопротивление из-за сложности с использованием монад для контроля побочных эффектов. Вэдлер пытается успокоить критиков, пояснив, что "монада это всего лишь моноид в категории эндофункторов, в чём проблема-то?"
 
-1991 – Голландский программист Guido van Rossum отправляется в Аргентину ради мистической операции. Он возвращается с ужасным шрамом на черепе, изобретает Python, объявляется пожизненным диктатором для легионов последователей и объявляет на весь мир что "Есть только один способ сделать что-либо". Поляки начинают нервничать.
+1991 – Голландский программист Guido van Rossum отправляется в Аргентину ради мистической операции. Он возвращается с ужасным шрамом на черепе, изобретает Python, объявляется пожизненным диктатором для легионов последователей и объявляет на весь мир, что "Есть только один способ сделать что-либо". Поляки начинают нервничать.
 
 1995 – В итальянском ресторане Rasmus Lerdorf понимает, что его тарелка спагетти это отличная модель для понимания сущности World Wide Web и веб-приложения должны имитировать её середину. На обратной стороне салфетки он проектирует Программируемую Хипертекстовую Пасту (ПХП). Документация на PHP до сих пор остается на этой салфетке.
 
