--- a/source/posts/2012-04-23.md
+++ b/source/posts/2012-04-23.md
@@ -8,7 +8,7 @@
 * Закрылось веб-приложение Google Talk для мобильных. Кто знал, что оно вообще было? o_O
 * One Pass, система платежей, использовавшаяся в основном в Google News, остановлена. Перешли на прямые договора и платежи с поставщиками контента.
 * проект Patent Search закрыт, зато на самом гугле теперь можно уточнить, что ищешь только в патентах. Это, кажется, самое разумное решение из всех сегодняшних закрытий.
-* Закрываются проекты "Picassa для Linux", "Picassa Web Albums Uploader для Mac" и "Picassa Web Albums Plugin для iPhoto". Гики - рыдайте.
+* Закрываются проекты "Picasa для Linux", "Picasa Web Albums Uploader для Mac" и "Picasa Web Albums Plugin для iPhoto". Гики - рыдайте.
 
 Даже не знаю, есть ли тут о чем горевать?
 
