BackBerry Sync -> BlackBerry Sync

--- a/source/posts/2012-04-23.md
+++ b/source/posts/2012-04-23.md
@@ -4,7 +4,7 @@
 * [Почти все API перешли в зону one-year policy.](http://googledevelopers.blogspot.com/2012/04/changes-to-deprecation-policies-and-api.html) - обратите внимание, не API поменялись, а просто полиси.
 * [Закрылся, а точнее переехал в проект HeatMap промо-проект прошлого года Flu Vaccine Finder](http://flushot.healthmap.org/).
 * Очень жаль, но закрылся проект Google Related, работавший этаким интеллектуальным StumbleUpon.
-* С 1го июня прекратится поддержка BackBerry Sync.
+* С 1го июня прекратится поддержка BlackBerry Sync.
 * Закрылось веб-приложение Google Talk для мобильных. Кто знал, что оно вообще было? o_O
 * One Pass, система платежей, использовавшаяся в основном в Google News, остановлена. Перешли на прямые договора и платежи с поставщиками контента.
 * проект Patent Search закрыт, зато на самом гугле теперь можно уточнить, что ищешь только в патентах. Это, кажется, самое разумное решение из всех сегодняшних закрытий.
