--- a/source/posts/2012-04-24.md
+++ b/source/posts/2012-04-24.md
@@ -17,7 +17,7 @@
 * [Джастин Кан, автор Justin.tv, "Может мы и внутри пузыря, но это не важно"](http://justinkan.com/maybe-were-in-a-bubble-but-it-doesnt-matter). О том, что не важно насколько раздуты IPO Зинги или стоимость Инстаграмма, остальная индустрия не обязана быть такой же. Вообще, если вспомнить историю дотком бабла, там тоже были хорошие игроки, не только пузырики.
 * [Хэндбук сотрудника Valve](http://www.scribd.com/doc/90495951/Valve-Company-Handbook-for-New-Employees#full), доказывающий, как хорошо живется в той части геймдева, где не так плохо с зарплатами. Мне всегда нравилась Valve.
 * [Майкрософт порадовали старых пользователей СкайДрайв: клиенты под почти все платформы, делающие из скайдрайва дропбокс](http://blogs.msdn.com/b/b8/archive/2012/04/23/the-next-chapter-for-skydrive-personal-cloud-storage-for-windows-available-anywhere.aspx). Удивительно, но клиент под iOS лучше, чем под WP7.
-* Я конечно буду стараться сдерживаться, но кажется у кого-то совсем поехала крыша. [Гугл завел себе собственный аналог Блогуна, для блоггер.ком](http://www.google.com/ads/affiliatenetwork/publishers/blogger/). За деньги, по заказу компаний, блогеры будут писать заказные статьи, а деньги будут проходить через гугл. Ну вы поняли, да? Кнопку я.денег в благодарность за эту непредвзятую статью хочешь нажать ты! Внизу страницы.
+* Я конечно буду стараться сдерживаться, но кажется у кого-то совсем поехала крыша. [Гугл завел себе собственный аналог Блогуна, для блоггер.ком](http://www.google.com/ads/affiliatenetwork/publishers/blogger/). За деньги, по заказу компаний, блоггеры будут писать заказные статьи, а деньги будут проходить через гугл. Ну вы поняли, да? Кнопку я.денег в благодарность за эту непредвзятую статью хочешь нажать ты! Внизу страницы.
 * [35 примеров интересных лендинг пейджей](http://unbounce.com/landing-page-examples/built-using-unbounce/beautiful-landing-page-design-examples/) и что особенно интересно - описаны плюсы и минусы каждой страницы. Спорно, но интересно.
 
 
