--- a/source/posts/2012-04-25.md
+++ b/source/posts/2012-04-25.md
@@ -10,17 +10,17 @@
 
 Есть и еще плюсы, которые не заявлены в [официальном посте в гуглоблог](http://googleenterprise.blogspot.com/2012/04/introducing-google-drive-newest-member.html) но присутствуют в той или иной форме. Например возможность оставлять коменты к файлам. Но это всё уже не важно, самые жирные точечки я перечислил выше.
 
-А теперь, у меня есть теория. Знаю, многим из вас она не понравится. Многие из вас сейчас думают что Google сделал убийцу DropBox. Граждане, не ведитесь. Нет. Это 100%ый убийца Evernote. Читайте месседж между строк: мы умеем то, от чего еверноут так открещщивался (коллаборация), умеем то же, чем он гордится (OCR картинок и фоток), и пошли еще дальше них (распознаем образы на картинках). Такой четкой маркетинговой атаки я не видел уже давно. Посмотрим, чем ответит Evernote, я верю что Степан Пачиков как минимум не хуже.
+А теперь, у меня есть теория. Знаю, многим из вас она не понравится. Многие из вас сейчас думают что Google сделал убийцу DropBox. Граждане, не ведитесь. Нет. Это 100%ый убийца Evernote. Читайте месседж между строк: мы умеем то, от чего еверноут так открещивался (коллаборация), умеем то же, чем он гордится (OCR картинок и фоток), и пошли еще дальше них (распознаем образы на картинках). Такой четкой маркетинговой атаки я не видел уже давно. Посмотрим, чем ответит Evernote, я верю что Степан Пачиков как минимум не хуже.
 
 По сути же - Google Drive это просто десктопная интеграция Google Docs. Бесплатного места *5GB*, остальное за деньги, сравнимые со скайдрайвом и дропбоксом. Версии для Linux нет. SDK для доступа к диску мимо Google Apps нет, т.е. пока сделать клиент для Linux самим сложно. Версии для iOS тоже пока нет. Мораль: если вы пользуетесь Evernote - пробуйте GDrive. Если вы пользуетесь DropBox - нет смысла менять шило на мыло. Если вы пользуетесь iCloud - вам некуда деваться, оставайтесь со мной :)
 
-И да, вы знаете, как веселые гуглеры назвали свой продукт в России? Гугл.Диск. Давно я так не улыбался во весь рот с утра :) Спасибо за признание заслуг, ага. Думаю через пол года фанбои гугла будут кричать "яндекс даже название у гугла спер!!!1111".
+И да, вы знаете, как веселые гуглеры назвали свой продукт в России? Гугл.Диск. Давно я так не улыбался во весь рот с утра :) Спасибо за признание заслуг, ага. Думаю через пол года фанбои гугла будут кричать "яндекс даже название у гугла спер!!!!!!!".
 
 
 ## Проектное и интернеты
 * [Думаете GPS это круто? IPS просто взорвет вам мозг!](http://www.extremetech.com/extreme/126843-think-gps-is-cool-ips-will-blow-your-mind). Ура-романтическая статья о том, как круто, что в новых телефонах будет аппаратная поддержка индор навигации. Мне это очень нравится, но боюсь не доживу.
 * [У нас четырехдневная неделя](http://ryanleecarson.tumblr.com/post/21708810513/4-day-week) пишет Райан Карсон из компании Трихаус. Это правда интересно, понять как он добился таких успехов, работая всей командой по 4 дня в неделю, по 8 часов в день. Завидую.
-* [Гугл тратит на лоббирование больше денег, чем Эппл, Фейсбук и Майкрософт вместе взятые](http://mashable.com/2012/04/24/google-record-lobbying/). Я в этом ничерта не понимаю, но мне интересно - ЗАЧЕМ?
+* [Гугл тратит на лоббирование больше денег, чем Эппл, Фейсбук и Майкрософт вместе взятые](http://mashable.com/2012/04/24/google-record-lobbying/). Я в этом ни черта не понимаю, но мне интересно - ЗАЧЕМ?
 * [Цукерберг не берет трубку, IPO откладывается](http://techcrunch.com/2012/04/24/facebook-delay-ipo/), и это в общем логично. Отстаньте от него со своим IPO, дайте человеку инстаграм прикупить.
 * [Гугл и классическая "я тоже!" ошибка](http://behindcompanies.com/2012/04/google-and-the-me-too-fallacy/). Еще одни слезы по ушедшему задору когда-то крутой и инновационной компании.
 * [LayerVault обновились](http://layervault.tumblr.com/post/21723378193/announcing-layervault-2). Это такой GitHub для дизайнеров. Неплохой.
@@ -29,7 +29,7 @@
  
 ## Браузеры и мобильное
 * [Вышел Firefox12](http://blog.mozilla.org/blog/2012/04/24/firefox-introduces-a-simpler-update-process-and-more-than-85-improvements-to-developer-tools/). Самое важное в нем - новый апдейтер, позволяющий "в стиле Хрома" скачивать и ставить апдейты быстро и незаметно для пользователя. Правильной дорогой идут, еще бы побыстрей немножко.
-* [В чем крутизна Galaxy Nexus за $399](http://gigaom.com/mobile/why-a-399-galaxy-nexus-from-google-is-a-big-deal/). Статью вставил, а в чем крутизна так и не понял. Ну кроме того, что он разлоченнный.
+* [В чем крутизна Galaxy Nexus за $399](http://gigaom.com/mobile/why-a-399-galaxy-nexus-from-google-is-a-big-deal/). Статью вставил, а в чем крутизна так и не понял. Ну кроме того, что он разлоченный.
 * [Новый контейнер для HTML-приложений app-UI](http://www.tricedesigns.com/2012/04/24/introducing-app-ui/), на этот раз фишка в том, что одно и то же приложение подойдет и для браузера и для phonegap. 
 * [Линкедин отдали на растерзание опенсорса свою красивую expose-like страничку для iOS](https://engineering.linkedin.com/open-source/introducing-liexposecontroller-brand-new-way-interact-ios-apps).
 * [Фейсбук обновил свое приложение для WP7](http://www.engadget.com/2012/04/24/facebook-for-windows-phone-getting-a-major-refresh/). Приятно что не забывают.
@@ -37,7 +37,7 @@
 ## Технологии
 * [Вышел Twitter Bootstrap 2.0.3](http://blog.getbootstrap.com/2012/04/bootstrap-2-0-3-released/). Версия минорная, а ченджлог такой, что хватит на два мажорных релиза.
 * [Для тех кто как и я интересуется ClojureScript - набор синонимов Джаваскрипт->Кложур](http://himera.herokuapp.com/synonym.html). Очень удобно при изучении языка.
-* [Нечто обратное по смыслу выражению "горячая вакансия"](http://arstechnica.com/business/coolest-jobs-in-tech/2012/04/coolest-jobs-in-tech-literally-running-a-south-pole-data-center.ars) - о том как работает самый южный датацентр в мире. Дада, на южном полюсе.
+* [Нечто обратное по смыслу выражению "горячая вакансия"](http://arstechnica.com/business/coolest-jobs-in-tech/2012/04/coolest-jobs-in-tech-literally-running-a-south-pole-data-center.ars) - о том как работает самый южный датацентр в мире. Да да, на южном полюсе.
 * [Гайды по оформлению HTML/CSS от гугла](http://google-styleguide.googlecode.com/svn/trunk/htmlcssguide.xml). Некоторые моменты любопытные в силу моей безграмотности в этой области.
 * [pastie.org сегодня весь день кто-то DDoSит](http://pastie.org/). Еще один гвоздь в крышку рельсов™.
 * [Меморипрофайлинг для питона всегда был довольно муторным, пока мы не узнали юпи!](http://fseoane.net/blog/2012/line-by-line-report-of-memory-usage/) - Фабиан Педрегоза написал хитрый профайлер, позволяющий увидеть потребление памяти для каждой строки кода. Осторожнее, тормозит как черте что, форкает процесс на каждой строчке.
