--- a/source/posts/2012-04-25.md
+++ b/source/posts/2012-04-25.md
@@ -2,7 +2,7 @@
 ![картинка](http://addmeto.cc/images/posts/google-drive.png)
 
 Сегодняшняя тема дня, со всей определенностью, запуск проекта Google Drive.
-Впервые о существовании такой задумки рассказали в 2008ом году, тогда он называется "Project Paltypus", я уже даже не помню почему. А потом все устали ждать. В промежутке между 2008ым и вчера появились Dropbox, SkyDrive, Box.com, SugarSync, iCloud, BitCasa, inSync, Я.Диск и еще вагон других проектов, с которыми сейчас будут сравнивать гуглдрайв. Так в чем же разница? Есть три важных продуктовых качества, которые выделяют сейчас Drive:
+Впервые о существовании такой задумки рассказали в 2008ом году, тогда он называется "Project Platypus", я уже даже не помню почему. А потом все устали ждать. В промежутке между 2008ым и вчера появились Dropbox, SkyDrive, Box.com, SugarSync, iCloud, BitCasa, inSync, Я.Диск и еще вагон других проектов, с которыми сейчас будут сравнивать гуглдрайв. Так в чем же разница? Есть три важных продуктовых качества, которые выделяют сейчас Drive:
 
 1. Главный акцент, который делают ребята из гугла - гуглдрайв это средство для коллаборационной работы. Т.е. теперь вы можете легко и удобно шарить документы и файлы на группы людей.
 2. В драйв встроен OCR (на сколько я вижу - Tesseract), позволяющий искать по тексту в картинках. Конечно, нужно это чтобы не просто найти слово "vine" на фотографии бутылки вина. Главное для меня применение OCR в Драйве - поиск по плохим сканированным документам, лежащим у меня в .pdf.
