--- a/source/posts/2012-04-26.md
+++ b/source/posts/2012-04-26.md
@@ -1,13 +1,13 @@
 # А  у вас VMware убежало
 ![картинка](http://addmeto.cc/images/posts/leak.jpg)
 
-Первый раз ссылку на куски исходников VMware ESX мне прислали неделю назад. Я тогда не особенно поверил, если честно. Потом была [статья на TheHacerNews, в которой приводились более авторитетные источники](http://thehackernews.com/2012/04/vmware-source-code-leaked-by-anonymous.html). Я засомневался, если честно. Но когда сегодня [в arstechnica я прочитал, что VMware подтвердили утечку](http://arstechnica.com/business/news/2012/04/vmware-confirms-source-code-leak-lulzsec-affiliated-hacker-claims-credit.ars), я удивился, если честно.
+Первый раз ссылку на куски исходников VMware ESX мне прислали неделю назад. Я тогда не особенно поверил, если честно. Потом была [статья на TheHackerNews, в которой приводились более авторитетные источники](http://thehackernews.com/2012/04/vmware-source-code-leaked-by-anonymous.html). Я засомневался, если честно. Но когда сегодня [в arstechnica я прочитал, что VMware подтвердили утечку](http://arstechnica.com/business/news/2012/04/vmware-confirms-source-code-leak-lulzsec-affiliated-hacker-claims-credit.ars), я удивился, если честно.
 
 Что же собственно утекло? Утек весь (или почти весь) код ESX hypervisor. Да, это "предыдущая версия" гипервизора от VMware, новая называется ESXi. Но по статистике на новую версию пока перешло менее 5% серверного парка.
 
 "Тот факт, что исходный код стал достоянием общественности, еще не означает что как-то увеличился риск для покупателей VMware", - [говорят провинившиеся](http://blogs.vmware.com/security/2012/04/vmware-security-note.html). "VMware активно раздает свои исходные коды и интерфейсы другим представителям IT индустрии, чтобы расширить экосистему виртуализации. Мы серьезно заботимся о безопасности потребителей и у нас есть много внешних и внутренних ресурсов, включая нашу VMware Security Response Center, для глубоких исследований. Мы будем продолжать держать в курсе сообщество VMware, если какая-то дополнительная информация станет доступна".
 
-В общем VMware говорит "без паники!", ребята из Касперских кричат "аааАААААаааАаААА!", а я сижу и наблюдаю за этим инцедентом, потому что у самого у меня никаких серверов на VMware ESX конечно нет.
+В общем VMware говорит "без паники!", ребята из Касперских кричат "аааАААААаааАаААА!", а я сижу и наблюдаю за этим инцидентом, потому что у самого у меня никаких серверов на VMware ESX конечно нет.
 
 
 
@@ -38,12 +38,12 @@
 * [Чуваки из Блекко рассказали про то, как работает их собственная велосипедная база](http://highscalability.com/blog/2012/4/25/the-anatomy-of-search-technology-blekkos-nosql-database.html). Почему эту базу они называют NoSQL? А. Ну да. Потому что там нет SQL!
 * [А ребята из bit.ly рассказали, как работает их подсчет кликов](http://word.bitly.com/post/21721687297/clickatron). Тоже с помощью самонаписанной NoSQL базы данных.
 * [Ракспейс, выпускающий проект Cassandra CQL,  зарелизили биндинги для Node.js](http://www.rackspace.com/blog/rackspace-contributes-cassandra-cql-driver-for-node-js/).
-* [В ответ, чуваки из 10gen рассказали, что теперь официально поддерживают драйвер Node.js для Mongo](http://blog.mongodb.org/post/21780849392/mongodb-and-node-js-at-10gen). Паровоз ноды бежит вперед. В комунyе остановка!
+* [В ответ, чуваки из 10gen рассказали, что теперь официально поддерживают драйвер Node.js для Mongo](http://blog.mongodb.org/post/21780849392/mongodb-and-node-js-at-10gen). Паровоз ноды бежит вперед. В коммуне остановка!
 
 ## Браузеры и мобильное
 * [Опера подтвердила что будет использовать стили с префиксом `-webkit`](http://www.netmagazine.com/news/opera-confirms-webkit-prefix-usage-121923). В общем логично, сейчас куча сайтов оптимизирована под вебкит, куда ей деваться?
 * Я вам про mruby уже рассказывал. [Интересный туториал "как начать с mruby"](http://matt.aimonetti.net/posts/2012/04/25/getting-started-with-mruby/). Всё хочу попробовать, никак руки не дойдут.
-* [Слух о Фейсбукофоне наносит ответный удар](http://techcrunch.com/2012/04/25/the-facebook-phone-rumor-is-back/). Теперь по слухам это очень подточеный андроид.
+* [Слух о Фейсбукофоне наносит ответный удар](http://techcrunch.com/2012/04/25/the-facebook-phone-rumor-is-back/). Теперь по слухам это очень подточенный андроид.
 * Олди, бат голди, [История строки юзер-агентов браузеров](http://webaim.org/blog/user-agent-string-history/). Написано в духе библейских историй.
 * [Конец андроида близок](http://www.businessinsider.com/the-end-of-android-approaches--2012-4). К этой статье в бизнесинсайдере стоило бы прибавить "ШОК! ВИДЕО!".
 * [Глубокий взгляд на рендеринг шрифтов в разных условиях и средах](http://www.smashingmagazine.com/2012/04/24/a-closer-look-at-font-rendering/). Поражает насколько по разному выглядят одни и те же шрифты в разных OS.
