Древние-реликтовые очепятки

--- a/source/posts/2012-02-28.md
+++ b/source/posts/2012-02-28.md
@@ -20,7 +20,7 @@ Slug: 2012-02-28
   
   смотри далее уже на самом [сайте новой платформы](http://www.openwebdevice.com/).
 
-* [Офигенный дизайн, бета-версия Skype for Windows Phone](http://www.theverge.com/2012/2/27/2827455/skype-for-windows-phone-beta) прямо облизать хочется, простите за формулировку. Для тех, кто хочет посмотреть вживую [ссылка на маркет](http://www.windowsphone.com/en-US/apps/c3f8e570-68b3-4d6a-bdbb-c0a3f4360a51)
+* [Офигенный дизайн, бета-версия Skype for Windows Phone](http://www.theverge.com/2012/2/27/2827455/skype-for-windows-phone-beta) прямо облизать хочется, простите за формулировку. Для тех, кто хочет посмотреть в живую [ссылка на маркет](http://www.windowsphone.com/en-US/apps/c3f8e570-68b3-4d6a-bdbb-c0a3f4360a51)
 * [Гугл сам не понимает что делать с купленной Мотороллой](http://www.theverge.com/2012/2/27/2827692/google-building-firewall-between-android-and-motorola-after)
   > Google's Andy Rubin led the charge to acquire Motorola, but the Android boss won't have anything to do with the company once the deal closes — he told reporters at Mobile World Congress today that he "sponsored" the acquisition but now has "nothing to do with it.... I don't even know who's running it." 
 
@@ -44,10 +44,10 @@ Slug: 2012-02-28
 * Две штучки про стартапы: [Классическая хоррор-стори от стартапера](http://venturebeat.com/2012/02/27/a-classic-startup-horror-story-the-ma-bait-and-switch/) и [Как убить стартап прислушиваясь к пользователям](http://steveblank.com/2012/02/27/killing-your-startup-by-listening-to-customers/)
 * И классика [Идея не самоценна и является только мультипликатором к реализации](http://www.oreillynet.com/onlamp/blog/2005/08/ideas_are_just_a_multiplier_of.html) - статья 2005го года, актуальна как никогда.
 
-И вместо финала: когда-то давным давно в xkcd был предложен метод геохешинга, для геренации случайных мест встречи недалеко от заданной точки
+И вместо финала: когда-то давным давно в xkcd был предложен метод геохешинга, для генерации случайных мест встречи недалеко от заданной точки
 
 ![](http://wiki.xkcd.com/wgh/images/thumb/5/51/Coordinates.png/400px-Coordinates.png)
 
 Так вот, недавно был проведен geohashing meetup [в километре от южного полюса](http://blog.xkcd.com/2012/02/27/geohashing-2/). И вообще, оказалось что метод живучий и им реально пользуются ~~люди~~ гики!
 
-***PS: Давайте как то обсуждать интересные ссылки, чтоли, а то мне ж скучно просто писать :)***
+***PS: Давайте как то обсуждать интересные ссылки, что ли, а то мне ж скучно просто писать :)***
