--- a/source/posts/2012-02-29.md
+++ b/source/posts/2012-02-29.md
@@ -20,7 +20,7 @@ Slug: 2012-02-29
 * У гиковской поисковой системы [DuckDuckGo!](http://duckduckgo.com), которой я пользуюсь, сегодня первый день рождения. Ну да, они запустились 4 года назад, 29 февраля. Набор хороших ссылок про то, [как у них все начиналось](http://www.gabrielweinberg.com/blog/2012/02/happy-first-birthday-duckduckgo.html)
 * [Пикозу, графический редактор на html5](http://www.picozu.com/editor) мне показался очень милым и не тормозящим. Вот бы его в наши Фотки, да?
 * [У Dropbox грядет редизайн, тут можно подглядеть](https://www2.dropbox.com/login). Все стало аккуратнее, но ничего критично не поменялось.
-* [Визуальный редактор HTML/jQuery](http://www.codecanvas.org/) простенько, но с претензией. Как же жалко народX :(
+* [Визуальный редактор HTML/jQuery](http://www.codecanvas.org/) простенько, но с претензией. Как же жалко народ :(
 
 
 ### Браузеры и мобильное
@@ -39,7 +39,7 @@ Slug: 2012-02-29
 * Для тех, кто интересуется, [ревью интерфейса Gnome3.4](http://afaikblog.wordpress.com/2012/02/28/looking-forward-to-gnome-3-4/)
 * Интуитивный интерфейс у Скайп. Понятен [даже орангутангам](http://www.extremetech.com/extreme/111143-orangutans-to-skype-between-zoos-with-ipads) которые скайпятся друг с другом.
 * [Интервью с Эваном Вильямсом](http://blog.news.me/post/18439216464/getting-the-news-evan-williams) на тему "как ты получаешь новости". Если вы не в курсе - Эван со-основатель Blogger.com, а после продажи, со-основатель Твиттера.
-* [Видео про эффект МакГурка](http://www.youtube.com/watch?v=G-lN8vWm3m0) - о том, насколько зрение для нас важнее, чем слух. 3 минуты, посмотрите, правда инетерсно.
+* [Видео про эффект МакГурка](http://www.youtube.com/watch?v=G-lN8vWm3m0) - о том, насколько зрение для нас важнее, чем слух. 3 минуты, посмотрите, правда интересно.
 * [Заметка на tnw о мужике, который пошутил, но попал в Sponsored Story фейсбука](http://thenextweb.com/media/2012/02/28/if-youre-not-careful-facebook-could-make-you-a-spokesperson-for-personal-lubricant/), поучительно, но поржать.
 
 P.S. все говорят что 7 марта выходит новый айпад. Ждёте?
