--- a/source/posts/2012-03-01.md
+++ b/source/posts/2012-03-01.md
@@ -12,13 +12,13 @@ Slug: 2012-03-01
 * [Майкрософт такие выпустили бесплатную версию своего Flight](http://www.geek.com/articles/games/free-to-play-microsoft-flight-released-20120229/) - конечно, как обычно, бесплатная версия урезанная.
 * [Как быть счастливым где угодно](http://www.fastcompany.com/1820974/buyology-martin-lindstrom-global-happiness) (без препаратов, дешево, не гербалайф) с очевидной мыслью *"меньше знаешь - крепче спишь"*
 * [Дебиановцы пробуют пересобрать весь дистрибутив c llvm](http://clang.debian.net/) - первые результаты в принципе есть.
-* Удобные [шаблоны для дизайна приложений](http://android-developers.blogspot.com/2012/02/android-design-v2-now-with-stencils.html) для андроида4.0. На самом деле правильно было написать "[в разделе "дизайн для андроида"](http://developer.android.com/design/downloads) появились ссылки на шаблоны для фотошопа и илюстратора".
+* Удобные [шаблоны для дизайна приложений](http://android-developers.blogspot.com/2012/02/android-design-v2-now-with-stencils.html) для андроида4.0. На самом деле правильно было написать "[в разделе "дизайн для андроида"](http://developer.android.com/design/downloads) появились ссылки на шаблоны для фотошопа и иллюстратора".
 * [Линус в своем ~~репертуаре~~ гуглплюсе рассказал о своем опыте работы с OpenSUSE](https://plus.google.com/102150693225130002912/posts/1vyfmNCYpi5) и о том, что он думает про "security people". *Whoever **moron** thought that it's "good security" to require the root password for everyday things like this is mentally diseased.*
 * [Гуглохром теперь предлагает открывать mailto: в gmail](http://gmailblog.blogspot.com/2012/02/open-email-links-directly-in-gmail.html)
-* Отличная статья про то, что [В будущем всё будет как кофишоп](http://blog.speculist.com/scenarios/the-coffee-shop-take-over.html). Видимо у автора кофишоп уже сегодня. В голландском смысле этого слова.
-* [Выступление Эрика Шмидта на MWC](https://www.youtube.com/watch?v=4DKLSO8wYzk) - осторожно, час малосвязанной маркетинговой речи
+* Отличная статья про то, что [В будущем всё будет как кофишоп](http://blog.speculist.com/scenarios/the-coffee-shop-take-over.html). Видимо у автора кофешоп уже сегодня. В голландском смысле этого слова.
+* [Выступление Эрика Шмидта на MWC](https://www.youtube.com/watch?v=4DKLSO8wYzk) - осторожно, час мало связанной маркетинговой речи
 * [Пояснение от Гугла про новую политику приватности](http://googleblog.blogspot.com/2012/02/googles-new-privacy-policy.html) и [коментарии npr по этому поводу](http://www.npr.org/2012/02/29/147643243/google-wins-hes-giving-up-on-privacy?sc=tw)
 * [В продолжение истории про HTTPS Everythere](https://www.eff.org/deeplinks/2012/02/https-everywhere-decentralized-ssl-observatory)
-* Широкоизвестная Violet Blue [пишет о цензуре в PayPal](https://www.zdnet.com/blog/violetblue/paypal-strong-arms-indie-ebook-publishers-over-erotic-content/1097), коротко - Пейпел отказался брать деньги за книги BDSM направленности :)
+* Широко известная Violet Blue [пишет о цензуре в PayPal](https://www.zdnet.com/blog/violetblue/paypal-strong-arms-indie-ebook-publishers-over-erotic-content/1097), коротко - Пейпел отказался брать деньги за книги BDSM направленности :)
 
 P.S. сегодня всё одной кучей, посмотрим будет ли так лучше
