--- a/source/posts/2012-05-04.md
+++ b/source/posts/2012-05-04.md
@@ -1,7 +1,7 @@
 # Как работают на энтузиазме
 У меня сегодня своего рода эксперимент. Сегодня вместо темы дня будет Сайт Дня.
 
-<div style="text-align: center"><a href='http://thn.gs'><img src='/images/posts/thn-gs-screenshot.png' style='float: none' /></a></div>
+<div style="text-align: center"><a href='http://thn.gs'><img src='http://addmeto.cc/images/posts/thn-gs-screenshot.png' style='float: none' /></a></div>
 
 Это очередной, да не такой как у всех, проект для ведения дел и задач. Собственно проекту [Smthn.gs](http://thn.gs/) не первый год. Но у них внезапный и полный редизайн. 
 
@@ -28,6 +28,7 @@
 * [Красивый концепт "как правильно организовать драгндроп файлов с десктопа на телефон"](http://www.fastcodesign.com/1669665/watch-this-ingenious-ui-idea-for-dragging-files-from-your-phone-to-computer). Ну, концепт красивый, вот только реализовать не получится, кажется.
 * [Очень спорная статья на теккранче: Андроид выигрывает потому, что Эппл ему позволяет](http://techcrunch.com/2012/05/02/winning-in-neither-name-nor-spirit/). Цифры, наверное, правильные, но выводы... {mobile} {hate} {apple} {android}
 * [Теория конспирации: Никто не поддерживает Windows Phone потому, что все хотят чтобы Нокия сдохла!](http://www.intomobile.com/2012/05/03/conspiracy-theory-no-one-supporting-windows-phone-because-everyone-wants-see-nokia-die/). {nokia} {mobile} {hate} {ms}
+* [Очень верное и правильное - давайте переходить на физические единицы измерения](http://smus.com/physical-units/). Особенно это важно на мобильных, где разница в DPI между устройствами может быть **очень** существенной. {mobile}
 
 ## На грани
 * [GIMP 2.8 вышел](http://www.webupd8.org/2012/05/gimp-28-stable-finally-available-for.html). Главное изменение - плагин, делающий одно большое окно с гимпом, теперь не надо качать отдельно - это просто пункт в настройках. И слава богу, столько людей хотели этого от гимпа последние 7 лет... {unix}
@@ -36,6 +37,7 @@
 * [Слепые и плоховидящие отлично пользуются iPhone](http://www.theatlantic.com/technology/archive/2012/05/how-the-blind-are-reinventing-the-iphone/256589/). Я в общем всё это знал, но тут речь о приложении Sandero, которое умеет всё выводить только текстом. {mobile}
 * [Новинка: взломанные сайты, которые раздают малварь для андроида](http://www.zdnet.com/blog/security/a-first-hacked-sites-with-android-drive-by-download-malware/11810). Чем дальше, тем больше стоит заботиться о безопасности на телефонах. {security} {mobile}
 * [Подборка красивых одностраничных сайтов](http://www.webdesignerdepot.com/2012/05/roundup-of-single-page-websites/). Мне очень [вот этот понравился](http://www.anthonyfonte.com/). {html} {design}
+* [Череда инструментов, для написания iOS приложений на Ruby продолжается](http://arstechnica.com/business/news/2012/05/exclusive-building-ruby-ios-applications-with-rubymotion.ars). В этот раз - RubyMotion. {mobile} {ruby}
 
 
 ## Для гиков
